--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: 吕毅
-display_title: 吕毅's blog, Focus on Windows
+title: Jiayi
+display_title: Jiayi's blog, Tongji Uni. Student
 ---
 
 <!DOCTYPE html>
