--- a/private.html
+++ b/private.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 胡思乱想
-permalink: /mind/
+permalink: /private/
 ---
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
