--- a/private.html
+++ b/private.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 胡思乱想
-permalink: /private/
+title: Private
+permalink: /confidential/
 ---
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
