--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ permalink: /projects/
   <div id="grid" class="row flex-grid">
     {% assign articles = site.articles %}
     {% assign articles = articles | sort: date | reverse %}
-    {% for post in articles %}
+    {% for post in projects %}
       <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
         <div class="box-body">
           <div class="box-info">
