--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@ permalink: /projects/
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
   <div id="grid" class="row flex-grid">
-    {% assign projects = site.projects %}
-    {% assign projects = projects | sort: date | reverse %}
+    <!-- {% assign projects = site.projects %}
+    {% assign projects = projects | sort: date | reverse %} -->
     {% for post in projects %}
       <article class="box-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
         <div class="box-body">
