--- a/mind.html
+++ b/mind.html
@@ -3,10 +3,11 @@ layout: page
 title: “胡思乱想”
 permalink: /mind/
 ---
+<p itemprop="description" class="subtitle"></p>
+        <p>如你所知，我是一个有话必说、有屁必放的人，为避免造成任何困扰或坐立难安，</p>
+        <p>一些突然涌到喉头的话就当作一些杂记写在这里，以期会有时日让其重见光日，</p>
+        <p>或是永远埋葬。</p>
 
-如你所知，我是一个有话必说、有屁必放的人，为避免造成任何困扰或坐立难安，一些突然涌到喉头的话就当作一些杂记写在这里，以期会有时日让其重见光日，或是永远埋葬。
-
----
 
 <main class="home" id="post" role="main" itemprop="mainContentOfPage" itemscope="itemscope" itemtype="http://schema.org/Blog">
   <div id="grid" class="row flex-grid">
